BTWCT-1030: Navigation Component (Mobile) - L2 Navigation => Level 1 fix positioning, Level 2 overflow auto

--- a/waters-aem-frontend/src/styles/navigation.scss
+++ b/waters-aem-frontend/src/styles/navigation.scss
@@ -68,15 +68,22 @@ nav.cmp-navigation {
       }
 
       @include mobile {
+         > .cmp-navigation__item {
+            width: 100%;
+         }
+
          &.is-expanded > .cmp-navigation__item.is-active > .cmp-navigation__group {
             visibility: visible;
             display: block;
+            overflow-x: hidden;
+            overflow-y: auto;
          }
 
          &.is-expanded > .cmp-navigation__item.is-active{
             display: $level0MobileDisplay;
             flex-direction: column;
-            height: auto;
+            height: 100vh;
+            position: fixed;
 
             & > .cmp-navigation__container {
                padding: $space-m $space-m $space-m $space-xl;
